@@ -454,17 +454,20 @@ struct game games[] = {
     save_info           : quake_save_info,
     init_maps           : unreal_init_maps,
     has_map             : unreal_has_map,
+    default_home        : "~/.ut2003",
     pd                  : &ut2_private,
     command             : stringlist019,
   },
   {
     type                : UT2004_SERVER,
-    flags               : GAME_CONNECT | GAME_SPECTATE | GAME_PASSWORD | GAME_LAUNCH_HOSTPORT,
+    flags               : GAME_CONNECT | GAME_SPECTATE | GAME_PASSWORD | GAME_LAUNCH_HOSTPORT | GAME_MASTER_CDKEY,
     name                : "UT 2004",
     default_port        : 7777,
+    default_master_port : 28902,
     id                  : "UT2004S",
     qstat_str           : "UT2S",
     qstat_option        : "-ut2s",
+    qstat_master_option : "-ut2004m",
     icon                : "ut2004_xpm",
     parse_player        : un_parse_player,
     parse_server        : quake_parse_server,
@@ -474,6 +477,8 @@ struct game games[] = {
     save_info           : quake_save_info,
     init_maps           : unreal_init_maps,
     has_map             : unreal_has_map,
+    cmd_or_dir_changed  : ut2004_cmd_or_dir_changed,
+    default_home        : "~/.ut2004",
     pd                  : &ut2004_private,
     command             : stringlist020,
   },
