@@ -1129,6 +1129,8 @@ static char *builtin_masters_update_info[] = {
 
   "ADD JK3S master://masterjk3.ravensoft.com:29060 Ravensoft",
 
+  "ADD UT2004S master://ut2004master1.epicgames.com:28902 Epic",
+
   "ADD QS lan://255.255.255.255 LAN",
   "ADD QWS lan://255.255.255.255 LAN",
   "ADD Q2S lan://255.255.255.255 LAN",
